# anagrams-cpp

./: .gitignore  Makefile.am  README.md  configure.ac
include/: dict.h  trie_map.h
src/: .anagrams.cpp.swp  anagrams.cpp
test/: testAnagrams.cpp  testAnagrams.sh
