CXX = clang++
CXXFLAGS = -std=c++0x -stdlib=libc++ -O3
#CXXFLAGS = -O3

bin_PROGRAMS = \
	anagrams

anagrams_SOURCES = src/anagrams.cpp

#check_PROGRAMS = test/testAnagrams
#
#test_testAnagrams_SOURCES = test/testAnagrams.cpp
#
#TESTS_ENVIRONMENT = builddir=$(builddir)
TESTS = test/testAnagrams.sh
	    
